// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesignCitation renders  component with a mock espace record 1`] = `
<DesignCitation
  publication={
    Object {
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Dickson, Michael",
          "rek_author_id": 30053844,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:162308",
          "rek_author_xsdmf_id": 12125,
        },
        Object {
          "rek_author": "Francis, Mara",
          "rek_author_id": 30053845,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:162308",
          "rek_author_xsdmf_id": 12125,
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 5490,
          "rek_author_id_id": 29399570,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:162308",
          "rek_author_id_xsdmf_id": 12120,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 29399571,
          "rek_author_id_order": 2,
          "rek_author_id_pid": "UQ:162308",
          "rek_author_id_xsdmf_id": 12120,
        },
      ],
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Dickson Francis sia Architects",
          "rek_contributor_id": 3202233,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Azimuts sia Surveyors",
          "rek_contributor_id": 3202234,
          "rek_contributor_order": 2,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "ARB Nams sia Structural consultants",
          "rek_contributor_id": 3202235,
          "rek_contributor_order": 3,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Projektshanas birojs a.i.d.e Electrical consultants",
          "rek_contributor_id": 3202236,
          "rek_contributor_order": 4,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Telekom serviss sia Low voltage consultants",
          "rek_contributor_id": 3202237,
          "rek_contributor_order": 5,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Voteks sia Ventilation consultants",
          "rek_contributor_id": 3202238,
          "rek_contributor_order": 6,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "HVAC sia Heating, water and sewerage consultants",
          "rek_contributor_id": 3202239,
          "rek_contributor_order": 7,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Latinwest sia Swimming pool consultants",
          "rek_contributor_id": 3202240,
          "rek_contributor_order": 8,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Aleja D sia Landscape consultants",
          "rek_contributor_id": 3202241,
          "rek_contributor_order": 9,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
      ],
      "fez_record_search_key_contributor_id": Array [
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387113,
          "rek_contributor_id_order": 1,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387114,
          "rek_contributor_id_order": 2,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387115,
          "rek_contributor_id_order": 3,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387116,
          "rek_contributor_id_order": 4,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387117,
          "rek_contributor_id_order": 5,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387118,
          "rek_contributor_id_order": 6,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387119,
          "rek_contributor_id_order": 7,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387120,
          "rek_contributor_id_order": 8,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387121,
          "rek_contributor_id_order": 9,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
      ],
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": Object {
        "rek_date_available": "2008-01-01T00:00:00Z",
        "rek_date_available_id": 958217,
        "rek_date_available_pid": "UQ:162308",
        "rek_date_available_xsdmf_id": 12163,
      },
      "fez_record_search_key_end_date": Object {
        "rek_end_date": "2005-01-05 00:00:00",
        "rek_end_date_id": 8,
        "rek_end_date_pid": "UQ:162308",
        "rek_end_date_xsdmf_id": 12154,
      },
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:3804",
          "rek_ismemberof_id": 11965237,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:162308",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:152266",
          "rek_ismemberof_id": 11965238,
          "rek_ismemberof_order": 2,
          "rek_ismemberof_pid": "UQ:162308",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:254105",
          "rek_ismemberof_id": 11965239,
          "rek_ismemberof_order": 3,
          "rek_ismemberof_pid": "UQ:162308",
          "rek_ismemberof_xsdmf_id": 149,
        },
      ],
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_keywords": Array [
        Object {
          "rek_keywords": "Architecture",
          "rek_keywords_id": 30033418,
          "rek_keywords_order": 1,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
        Object {
          "rek_keywords": "Landscape design",
          "rek_keywords_id": 30033419,
          "rek_keywords_order": 2,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
        Object {
          "rek_keywords": "Restoration",
          "rek_keywords_id": 30033420,
          "rek_keywords_order": 3,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
        Object {
          "rek_keywords": "Interior and Environmental Design",
          "rek_keywords_id": 30033421,
          "rek_keywords_order": 4,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
        Object {
          "rek_keywords": "Original Creative Works - Design/Architectural work",
          "rek_keywords_id": 30033422,
          "rek_keywords_order": 5,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
      ],
      "fez_record_search_key_language": Array [],
      "fez_record_search_key_link": Array [],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [
        Object {
          "rek_location": "Meshaparks, Riga, Latvia",
          "rek_location_id": 76950,
          "rek_location_order": null,
          "rek_location_pid": "UQ:162308",
          "rek_location_xsdmf_id": 12159,
        },
      ],
      "fez_record_search_key_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_place_of_publication": Object {
        "rek_place_of_publication": "Riga, Latvia",
        "rek_place_of_publication_id": 4344342,
        "rek_place_of_publication_pid": "UQ:162308",
        "rek_place_of_publication_xsdmf_id": 12303,
      },
      "fez_record_search_key_project_name": Object {
        "rek_project_name": "Site setting and circumstance: A house and courtyard garden, Riga, Latvia",
        "rek_project_name_id": 3660,
        "rek_project_name_pid": "UQ:162308",
        "rek_project_name_xsdmf_id": 12165,
      },
      "fez_record_search_key_project_start_date": Object {
        "rek_project_start_date": "2005-01-05 00:00:00",
        "rek_project_start_date_id": 8,
        "rek_project_start_date_pid": "UQ:162308",
        "rek_project_start_date_xsdmf_id": 12154,
      },
      "fez_record_search_key_publisher": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": Object {
        "rek_refereed_source": "453638",
        "rek_refereed_source_id": 1420425,
        "rek_refereed_source_pid": "UQ:162308",
        "rek_refereed_source_xsdmf_id": 16623,
      },
      "fez_record_search_key_rights": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_series": null,
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": Object {
        "rek_start_date": "2005-01-05 00:00:00",
        "rek_start_date_id": 8,
        "rek_start_date_pid": "UQ:162308",
        "rek_start_date_xsdmf_id": 12154,
      },
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_subject": Array [
        Object {
          "rek_subject": 310000,
          "rek_subject_id": 9416991,
          "rek_subject_order": 1,
          "rek_subject_pid": "UQ:162308",
          "rek_subject_xsdmf_id": 12137,
        },
        Object {
          "rek_subject": 450025,
          "rek_subject_id": 9416992,
          "rek_subject_order": 2,
          "rek_subject_pid": "UQ:162308",
          "rek_subject_xsdmf_id": 12137,
        },
        Object {
          "rek_subject": 452674,
          "rek_subject_id": 9416993,
          "rek_subject_order": 3,
          "rek_subject_pid": "UQ:162308",
          "rek_subject_xsdmf_id": 12137,
        },
        Object {
          "rek_subject": 452675,
          "rek_subject_id": 9416994,
          "rek_subject_order": 4,
          "rek_subject_pid": "UQ:162308",
          "rek_subject_xsdmf_id": 12137,
        },
      ],
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "1 Design project",
        "rek_total_pages_id": 5709778,
        "rek_total_pages_pid": "UQ:162308",
        "rek_total_pages_xsdmf_id": 12309,
      },
      "fez_record_search_key_translated_title": null,
      "rek_altmetric_id": null,
      "rek_altmetric_id_xsdmf_id": null,
      "rek_altmetric_score": null,
      "rek_altmetric_score_xsdmf_id": null,
      "rek_citation": "",
      "rek_copyright": "on",
      "rek_copyright_xsdmf_id": 3679,
      "rek_created_date": "2009-01-30T11:08:42Z",
      "rek_created_date_xsdmf_id": 3677,
      "rek_date": "2017-10-31T13:53:23Z",
      "rek_date_xsdmf_id": null,
      "rek_depositor": 2575,
      "rek_depositor_affiliation": 888,
      "rek_depositor_affiliation_xsdmf_id": 11881,
      "rek_depositor_xsdmf_id": 7578,
      "rek_description": "The project is an exploration in the role of the garden as a means of generating a sense of place and to become a key focus in the formation and memory of a dwelling. The project is situated in Latvia, in the suburb of Meshaparks, an old established suburb of Riga. The suburb is characterized by larger lot sizes with villas set amongst trees. In the early 1930's Scandinavian functionalist architecture came to prominence and continued in popularity for a short period, dying out in the mid 1930's. The subject project involved the restoration of an existing timber functionalist house designed in 1933 by the architect Lidija Hofmane-Grinberga and constructed in the same year. The site also contained two outbuildings designed and constructed in the mid and late 1980's The project aimed to draw out the latent potential of the site circumstance that comprised the sunny garden hidden from the street and buildings that enclosed the garden to create an informal yet enclosed space that became in effect the major outdoor \\"room\\" of the house. The design draws inspiration from traditional Latvian farmhouse courtyard gardens, Japanese enclosed gardens as well as the work of Finnish architect Alvar Aalto.",
      "rek_description_xsdmf_id": 12199,
      "rek_display_type": 316,
      "rek_display_type_lookup": "Design",
      "rek_display_type_xsdmf_id": 3673,
      "rek_file_downloads": 15,
      "rek_formatted_abstract": null,
      "rek_formatted_abstract_xsdmf_id": null,
      "rek_formatted_title": null,
      "rek_formatted_title_xsdmf_id": null,
      "rek_genre": "Design",
      "rek_genre_type": null,
      "rek_genre_type_xsdmf_id": null,
      "rek_genre_xsdmf_id": 12156,
      "rek_herdc_notes": null,
      "rek_herdc_notes_xsdmf_id": null,
      "rek_object_type": 3,
      "rek_object_type_xsdmf_id": 3674,
      "rek_pid": "UQ:162308",
      "rek_pubmed_doc_type": null,
      "rek_pubmed_doc_type_xsdmf_id": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_scopus_doc_type_xsdmf_id": null,
      "rek_security_inherited": 1,
      "rek_status": 2,
      "rek_status_xsdmf_id": 3680,
      "rek_subtype": null,
      "rek_subtype_xsdmf_id": null,
      "rek_thomson_citation_count": null,
      "rek_thomson_citation_count_xsdmf_id": null,
      "rek_title": "Site setting and circumstance: A house and courtyard garden, Riga, Latvia",
      "rek_title_xsdmf_id": 12299,
      "rek_updated_date": "2014-10-05T09:50:47Z",
      "rek_updated_date_xsdmf_id": 3678,
      "rek_wok_doc_type": null,
      "rek_wok_doc_type_xsdmf_id": null,
    }
  }
>
  <div
    className="citationContent citationDesign"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      idSearchKey={
        Object {
          "idKey": "fez_record_search_key_author_id",
          "idOrder": "rek_author_id_order",
          "idSubkey": "rek_author_id",
        }
      }
      initialNumberOfAuthors={10}
      publication={
        Object {
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [
            Object {
              "rek_author": "Dickson, Michael",
              "rek_author_id": 30053844,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:162308",
              "rek_author_xsdmf_id": 12125,
            },
            Object {
              "rek_author": "Francis, Mara",
              "rek_author_id": 30053845,
              "rek_author_order": 2,
              "rek_author_pid": "UQ:162308",
              "rek_author_xsdmf_id": 12125,
            },
          ],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [
            Object {
              "rek_author_id": 5490,
              "rek_author_id_id": 29399570,
              "rek_author_id_order": 1,
              "rek_author_id_pid": "UQ:162308",
              "rek_author_id_xsdmf_id": 12120,
            },
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": 29399571,
              "rek_author_id_order": 2,
              "rek_author_id_pid": "UQ:162308",
              "rek_author_id_xsdmf_id": 12120,
            },
          ],
          "fez_record_search_key_contributor": Array [
            Object {
              "rek_contributor": "Dickson Francis sia Architects",
              "rek_contributor_id": 3202233,
              "rek_contributor_order": 1,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Azimuts sia Surveyors",
              "rek_contributor_id": 3202234,
              "rek_contributor_order": 2,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "ARB Nams sia Structural consultants",
              "rek_contributor_id": 3202235,
              "rek_contributor_order": 3,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Projektshanas birojs a.i.d.e Electrical consultants",
              "rek_contributor_id": 3202236,
              "rek_contributor_order": 4,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Telekom serviss sia Low voltage consultants",
              "rek_contributor_id": 3202237,
              "rek_contributor_order": 5,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Voteks sia Ventilation consultants",
              "rek_contributor_id": 3202238,
              "rek_contributor_order": 6,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "HVAC sia Heating, water and sewerage consultants",
              "rek_contributor_id": 3202239,
              "rek_contributor_order": 7,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Latinwest sia Swimming pool consultants",
              "rek_contributor_id": 3202240,
              "rek_contributor_order": 8,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Aleja D sia Landscape consultants",
              "rek_contributor_id": 3202241,
              "rek_contributor_order": 9,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
          ],
          "fez_record_search_key_contributor_id": Array [
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387113,
              "rek_contributor_id_order": 1,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387114,
              "rek_contributor_id_order": 2,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387115,
              "rek_contributor_id_order": 3,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387116,
              "rek_contributor_id_order": 4,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387117,
              "rek_contributor_id_order": 5,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387118,
              "rek_contributor_id_order": 6,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387119,
              "rek_contributor_id_order": 7,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387120,
              "rek_contributor_id_order": 8,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387121,
              "rek_contributor_id_order": 9,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
          ],
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": Object {
            "rek_date_available": "2008-01-01T00:00:00Z",
            "rek_date_available_id": 958217,
            "rek_date_available_pid": "UQ:162308",
            "rek_date_available_xsdmf_id": 12163,
          },
          "fez_record_search_key_end_date": Object {
            "rek_end_date": "2005-01-05 00:00:00",
            "rek_end_date_id": 8,
            "rek_end_date_pid": "UQ:162308",
            "rek_end_date_xsdmf_id": 12154,
          },
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:3804",
              "rek_ismemberof_id": 11965237,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:162308",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:152266",
              "rek_ismemberof_id": 11965238,
              "rek_ismemberof_order": 2,
              "rek_ismemberof_pid": "UQ:162308",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:254105",
              "rek_ismemberof_id": 11965239,
              "rek_ismemberof_order": 3,
              "rek_ismemberof_pid": "UQ:162308",
              "rek_ismemberof_xsdmf_id": 149,
            },
          ],
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_keywords": Array [
            Object {
              "rek_keywords": "Architecture",
              "rek_keywords_id": 30033418,
              "rek_keywords_order": 1,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
            Object {
              "rek_keywords": "Landscape design",
              "rek_keywords_id": 30033419,
              "rek_keywords_order": 2,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
            Object {
              "rek_keywords": "Restoration",
              "rek_keywords_id": 30033420,
              "rek_keywords_order": 3,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
            Object {
              "rek_keywords": "Interior and Environmental Design",
              "rek_keywords_id": 30033421,
              "rek_keywords_order": 4,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
            Object {
              "rek_keywords": "Original Creative Works - Design/Architectural work",
              "rek_keywords_id": 30033422,
              "rek_keywords_order": 5,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
          ],
          "fez_record_search_key_language": Array [],
          "fez_record_search_key_link": Array [],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [
            Object {
              "rek_location": "Meshaparks, Riga, Latvia",
              "rek_location_id": 76950,
              "rek_location_order": null,
              "rek_location_pid": "UQ:162308",
              "rek_location_xsdmf_id": 12159,
            },
          ],
          "fez_record_search_key_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_place_of_publication": Object {
            "rek_place_of_publication": "Riga, Latvia",
            "rek_place_of_publication_id": 4344342,
            "rek_place_of_publication_pid": "UQ:162308",
            "rek_place_of_publication_xsdmf_id": 12303,
          },
          "fez_record_search_key_project_name": Object {
            "rek_project_name": "Site setting and circumstance: A house and courtyard garden, Riga, Latvia",
            "rek_project_name_id": 3660,
            "rek_project_name_pid": "UQ:162308",
            "rek_project_name_xsdmf_id": 12165,
          },
          "fez_record_search_key_project_start_date": Object {
            "rek_project_start_date": "2005-01-05 00:00:00",
            "rek_project_start_date_id": 8,
            "rek_project_start_date_pid": "UQ:162308",
            "rek_project_start_date_xsdmf_id": 12154,
          },
          "fez_record_search_key_publisher": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": Object {
            "rek_refereed_source": "453638",
            "rek_refereed_source_id": 1420425,
            "rek_refereed_source_pid": "UQ:162308",
            "rek_refereed_source_xsdmf_id": 16623,
          },
          "fez_record_search_key_rights": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_series": null,
          "fez_record_search_key_source": null,
          "fez_record_search_key_start_date": Object {
            "rek_start_date": "2005-01-05 00:00:00",
            "rek_start_date_id": 8,
            "rek_start_date_pid": "UQ:162308",
            "rek_start_date_xsdmf_id": 12154,
          },
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_subject": Array [
            Object {
              "rek_subject": 310000,
              "rek_subject_id": 9416991,
              "rek_subject_order": 1,
              "rek_subject_pid": "UQ:162308",
              "rek_subject_xsdmf_id": 12137,
            },
            Object {
              "rek_subject": 450025,
              "rek_subject_id": 9416992,
              "rek_subject_order": 2,
              "rek_subject_pid": "UQ:162308",
              "rek_subject_xsdmf_id": 12137,
            },
            Object {
              "rek_subject": 452674,
              "rek_subject_id": 9416993,
              "rek_subject_order": 3,
              "rek_subject_pid": "UQ:162308",
              "rek_subject_xsdmf_id": 12137,
            },
            Object {
              "rek_subject": 452675,
              "rek_subject_id": 9416994,
              "rek_subject_order": 4,
              "rek_subject_pid": "UQ:162308",
              "rek_subject_xsdmf_id": 12137,
            },
          ],
          "fez_record_search_key_total_pages": Object {
            "rek_total_pages": "1 Design project",
            "rek_total_pages_id": 5709778,
            "rek_total_pages_pid": "UQ:162308",
            "rek_total_pages_xsdmf_id": 12309,
          },
          "fez_record_search_key_translated_title": null,
          "rek_altmetric_id": null,
          "rek_altmetric_id_xsdmf_id": null,
          "rek_altmetric_score": null,
          "rek_altmetric_score_xsdmf_id": null,
          "rek_citation": "",
          "rek_copyright": "on",
          "rek_copyright_xsdmf_id": 3679,
          "rek_created_date": "2009-01-30T11:08:42Z",
          "rek_created_date_xsdmf_id": 3677,
          "rek_date": "2017-10-31T13:53:23Z",
          "rek_date_xsdmf_id": null,
          "rek_depositor": 2575,
          "rek_depositor_affiliation": 888,
          "rek_depositor_affiliation_xsdmf_id": 11881,
          "rek_depositor_xsdmf_id": 7578,
          "rek_description": "The project is an exploration in the role of the garden as a means of generating a sense of place and to become a key focus in the formation and memory of a dwelling. The project is situated in Latvia, in the suburb of Meshaparks, an old established suburb of Riga. The suburb is characterized by larger lot sizes with villas set amongst trees. In the early 1930's Scandinavian functionalist architecture came to prominence and continued in popularity for a short period, dying out in the mid 1930's. The subject project involved the restoration of an existing timber functionalist house designed in 1933 by the architect Lidija Hofmane-Grinberga and constructed in the same year. The site also contained two outbuildings designed and constructed in the mid and late 1980's The project aimed to draw out the latent potential of the site circumstance that comprised the sunny garden hidden from the street and buildings that enclosed the garden to create an informal yet enclosed space that became in effect the major outdoor \\"room\\" of the house. The design draws inspiration from traditional Latvian farmhouse courtyard gardens, Japanese enclosed gardens as well as the work of Finnish architect Alvar Aalto.",
          "rek_description_xsdmf_id": 12199,
          "rek_display_type": 316,
          "rek_display_type_lookup": "Design",
          "rek_display_type_xsdmf_id": 3673,
          "rek_file_downloads": 15,
          "rek_formatted_abstract": null,
          "rek_formatted_abstract_xsdmf_id": null,
          "rek_formatted_title": null,
          "rek_formatted_title_xsdmf_id": null,
          "rek_genre": "Design",
          "rek_genre_type": null,
          "rek_genre_type_xsdmf_id": null,
          "rek_genre_xsdmf_id": 12156,
          "rek_herdc_notes": null,
          "rek_herdc_notes_xsdmf_id": null,
          "rek_object_type": 3,
          "rek_object_type_xsdmf_id": 3674,
          "rek_pid": "UQ:162308",
          "rek_pubmed_doc_type": null,
          "rek_pubmed_doc_type_xsdmf_id": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_scopus_doc_type_xsdmf_id": null,
          "rek_security_inherited": 1,
          "rek_status": 2,
          "rek_status_xsdmf_id": 3680,
          "rek_subtype": null,
          "rek_subtype_xsdmf_id": null,
          "rek_thomson_citation_count": null,
          "rek_thomson_citation_count_xsdmf_id": null,
          "rek_title": "Site setting and circumstance: A house and courtyard garden, Riga, Latvia",
          "rek_title_xsdmf_id": 12299,
          "rek_updated_date": "2014-10-05T09:50:47Z",
          "rek_updated_date_xsdmf_id": 3678,
          "rek_wok_doc_type": null,
          "rek_wok_doc_type_xsdmf_id": null,
        }
      }
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      showLink={false}
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors"
      >
        <CitationView
          className="citationAuthor"
          key="citationAuthor_1"
          prefix=""
          suffix=""
          value="Dickson, Michael"
        >
          <span
            className="citationAuthor"
          >
            Dickson, Michael
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_2"
          prefix=" and "
          suffix=""
          value="Francis, Mara"
        >
          <span
            className="citationAuthor"
          >
             and 
            Francis, Mara
          </span>
        </CitationView>
         
      </span>
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      date="2017-10-31T13:53:23Z"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate"
      >
        (
        2017
        ).
      </span>
    </DateCitationView>
    <CitationView
      className="citationTitle"
      prefix=" "
      suffix="."
      value="Site setting and circumstance: A house and courtyard garden, Riga, Latvia"
    >
      <span
        className="citationTitle"
      >
         
        Site setting and circumstance: A house and courtyard garden, Riga, Latvia
        .
      </span>
    </CitationView>
    <CitationView
      className="citationSource"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationSource empty"
      />
    </CitationView>
  </div>
</DesignCitation>
`;

exports[`DesignCitation renders  component with an empty source 1`] = `
<DesignCitation
  publication={
    Object {
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Dickson, Michael",
          "rek_author_id": 30053844,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:162308",
          "rek_author_xsdmf_id": 12125,
        },
        Object {
          "rek_author": "Francis, Mara",
          "rek_author_id": 30053845,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:162308",
          "rek_author_xsdmf_id": 12125,
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 5490,
          "rek_author_id_id": 29399570,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:162308",
          "rek_author_id_xsdmf_id": 12120,
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": 29399571,
          "rek_author_id_order": 2,
          "rek_author_id_pid": "UQ:162308",
          "rek_author_id_xsdmf_id": 12120,
        },
      ],
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Dickson Francis sia Architects",
          "rek_contributor_id": 3202233,
          "rek_contributor_order": 1,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Azimuts sia Surveyors",
          "rek_contributor_id": 3202234,
          "rek_contributor_order": 2,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "ARB Nams sia Structural consultants",
          "rek_contributor_id": 3202235,
          "rek_contributor_order": 3,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Projektshanas birojs a.i.d.e Electrical consultants",
          "rek_contributor_id": 3202236,
          "rek_contributor_order": 4,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Telekom serviss sia Low voltage consultants",
          "rek_contributor_id": 3202237,
          "rek_contributor_order": 5,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Voteks sia Ventilation consultants",
          "rek_contributor_id": 3202238,
          "rek_contributor_order": 6,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "HVAC sia Heating, water and sewerage consultants",
          "rek_contributor_id": 3202239,
          "rek_contributor_order": 7,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Latinwest sia Swimming pool consultants",
          "rek_contributor_id": 3202240,
          "rek_contributor_order": 8,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
        Object {
          "rek_contributor": "Aleja D sia Landscape consultants",
          "rek_contributor_id": 3202241,
          "rek_contributor_order": 9,
          "rek_contributor_pid": "UQ:162308",
          "rek_contributor_xsdmf_id": 12133,
        },
      ],
      "fez_record_search_key_contributor_id": Array [
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387113,
          "rek_contributor_id_order": 1,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387114,
          "rek_contributor_id_order": 2,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387115,
          "rek_contributor_id_order": 3,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387116,
          "rek_contributor_id_order": 4,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387117,
          "rek_contributor_id_order": 5,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387118,
          "rek_contributor_id_order": 6,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387119,
          "rek_contributor_id_order": 7,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387120,
          "rek_contributor_id_order": 8,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
        Object {
          "rek_contributor_id": 0,
          "rek_contributor_id_id": 2387121,
          "rek_contributor_id_order": 9,
          "rek_contributor_id_pid": "UQ:162308",
          "rek_contributor_id_xsdmf_id": 12128,
        },
      ],
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": Object {
        "rek_date_available": "2008-01-01T00:00:00Z",
        "rek_date_available_id": 958217,
        "rek_date_available_pid": "UQ:162308",
        "rek_date_available_xsdmf_id": 12163,
      },
      "fez_record_search_key_end_date": Object {
        "rek_end_date": "2005-01-05 00:00:00",
        "rek_end_date_id": 8,
        "rek_end_date_pid": "UQ:162308",
        "rek_end_date_xsdmf_id": 12154,
      },
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:3804",
          "rek_ismemberof_id": 11965237,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:162308",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:152266",
          "rek_ismemberof_id": 11965238,
          "rek_ismemberof_order": 2,
          "rek_ismemberof_pid": "UQ:162308",
          "rek_ismemberof_xsdmf_id": 149,
        },
        Object {
          "rek_ismemberof": "UQ:254105",
          "rek_ismemberof_id": 11965239,
          "rek_ismemberof_order": 3,
          "rek_ismemberof_pid": "UQ:162308",
          "rek_ismemberof_xsdmf_id": 149,
        },
      ],
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_keywords": Array [
        Object {
          "rek_keywords": "Architecture",
          "rek_keywords_id": 30033418,
          "rek_keywords_order": 1,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
        Object {
          "rek_keywords": "Landscape design",
          "rek_keywords_id": 30033419,
          "rek_keywords_order": 2,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
        Object {
          "rek_keywords": "Restoration",
          "rek_keywords_id": 30033420,
          "rek_keywords_order": 3,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
        Object {
          "rek_keywords": "Interior and Environmental Design",
          "rek_keywords_id": 30033421,
          "rek_keywords_order": 4,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
        Object {
          "rek_keywords": "Original Creative Works - Design/Architectural work",
          "rek_keywords_id": 30033422,
          "rek_keywords_order": 5,
          "rek_keywords_pid": "UQ:162308",
          "rek_keywords_xsdmf_id": 12138,
        },
      ],
      "fez_record_search_key_language": Array [],
      "fez_record_search_key_link": Array [],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [
        Object {
          "rek_location": "Meshaparks, Riga, Latvia",
          "rek_location_id": 76950,
          "rek_location_order": null,
          "rek_location_pid": "UQ:162308",
          "rek_location_xsdmf_id": 12159,
        },
      ],
      "fez_record_search_key_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_place_of_publication": Object {
        "rek_place_of_publication": "Riga, Latvia",
        "rek_place_of_publication_id": 4344342,
        "rek_place_of_publication_pid": "UQ:162308",
        "rek_place_of_publication_xsdmf_id": 12303,
      },
      "fez_record_search_key_project_name": Object {
        "rek_project_name": "Site setting and circumstance: A house and courtyard garden, Riga, Latvia",
        "rek_project_name_id": 3660,
        "rek_project_name_pid": "UQ:162308",
        "rek_project_name_xsdmf_id": 12165,
      },
      "fez_record_search_key_project_start_date": Object {
        "rek_project_start_date": "2005-01-05 00:00:00",
        "rek_project_start_date_id": 8,
        "rek_project_start_date_pid": "UQ:162308",
        "rek_project_start_date_xsdmf_id": 12154,
      },
      "fez_record_search_key_publisher": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": Object {
        "rek_refereed_source": "453638",
        "rek_refereed_source_id": 1420425,
        "rek_refereed_source_pid": "UQ:162308",
        "rek_refereed_source_xsdmf_id": 16623,
      },
      "fez_record_search_key_rights": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_series": null,
      "fez_record_search_key_source": Object {
        "rek_source": null,
      },
      "fez_record_search_key_start_date": Object {
        "rek_start_date": "2005-01-05 00:00:00",
        "rek_start_date_id": 8,
        "rek_start_date_pid": "UQ:162308",
        "rek_start_date_xsdmf_id": 12154,
      },
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_subject": Array [
        Object {
          "rek_subject": 310000,
          "rek_subject_id": 9416991,
          "rek_subject_order": 1,
          "rek_subject_pid": "UQ:162308",
          "rek_subject_xsdmf_id": 12137,
        },
        Object {
          "rek_subject": 450025,
          "rek_subject_id": 9416992,
          "rek_subject_order": 2,
          "rek_subject_pid": "UQ:162308",
          "rek_subject_xsdmf_id": 12137,
        },
        Object {
          "rek_subject": 452674,
          "rek_subject_id": 9416993,
          "rek_subject_order": 3,
          "rek_subject_pid": "UQ:162308",
          "rek_subject_xsdmf_id": 12137,
        },
        Object {
          "rek_subject": 452675,
          "rek_subject_id": 9416994,
          "rek_subject_order": 4,
          "rek_subject_pid": "UQ:162308",
          "rek_subject_xsdmf_id": 12137,
        },
      ],
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "1 Design project",
        "rek_total_pages_id": 5709778,
        "rek_total_pages_pid": "UQ:162308",
        "rek_total_pages_xsdmf_id": 12309,
      },
      "fez_record_search_key_translated_title": null,
      "rek_altmetric_id": null,
      "rek_altmetric_id_xsdmf_id": null,
      "rek_altmetric_score": null,
      "rek_altmetric_score_xsdmf_id": null,
      "rek_citation": "",
      "rek_copyright": "on",
      "rek_copyright_xsdmf_id": 3679,
      "rek_created_date": "2009-01-30T11:08:42Z",
      "rek_created_date_xsdmf_id": 3677,
      "rek_date": "2017-10-31T13:53:23Z",
      "rek_date_xsdmf_id": null,
      "rek_depositor": 2575,
      "rek_depositor_affiliation": 888,
      "rek_depositor_affiliation_xsdmf_id": 11881,
      "rek_depositor_xsdmf_id": 7578,
      "rek_description": "The project is an exploration in the role of the garden as a means of generating a sense of place and to become a key focus in the formation and memory of a dwelling. The project is situated in Latvia, in the suburb of Meshaparks, an old established suburb of Riga. The suburb is characterized by larger lot sizes with villas set amongst trees. In the early 1930's Scandinavian functionalist architecture came to prominence and continued in popularity for a short period, dying out in the mid 1930's. The subject project involved the restoration of an existing timber functionalist house designed in 1933 by the architect Lidija Hofmane-Grinberga and constructed in the same year. The site also contained two outbuildings designed and constructed in the mid and late 1980's The project aimed to draw out the latent potential of the site circumstance that comprised the sunny garden hidden from the street and buildings that enclosed the garden to create an informal yet enclosed space that became in effect the major outdoor \\"room\\" of the house. The design draws inspiration from traditional Latvian farmhouse courtyard gardens, Japanese enclosed gardens as well as the work of Finnish architect Alvar Aalto.",
      "rek_description_xsdmf_id": 12199,
      "rek_display_type": 316,
      "rek_display_type_lookup": "Design",
      "rek_display_type_xsdmf_id": 3673,
      "rek_file_downloads": 15,
      "rek_formatted_abstract": null,
      "rek_formatted_abstract_xsdmf_id": null,
      "rek_formatted_title": null,
      "rek_formatted_title_xsdmf_id": null,
      "rek_genre": "Design",
      "rek_genre_type": null,
      "rek_genre_type_xsdmf_id": null,
      "rek_genre_xsdmf_id": 12156,
      "rek_herdc_notes": null,
      "rek_herdc_notes_xsdmf_id": null,
      "rek_object_type": 3,
      "rek_object_type_xsdmf_id": 3674,
      "rek_pid": "UQ:162308",
      "rek_pubmed_doc_type": null,
      "rek_pubmed_doc_type_xsdmf_id": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_scopus_doc_type_xsdmf_id": null,
      "rek_security_inherited": 1,
      "rek_status": 2,
      "rek_status_xsdmf_id": 3680,
      "rek_subtype": null,
      "rek_subtype_xsdmf_id": null,
      "rek_thomson_citation_count": null,
      "rek_thomson_citation_count_xsdmf_id": null,
      "rek_title": "Site setting and circumstance: A house and courtyard garden, Riga, Latvia",
      "rek_title_xsdmf_id": 12299,
      "rek_updated_date": "2014-10-05T09:50:47Z",
      "rek_updated_date_xsdmf_id": 3678,
      "rek_wok_doc_type": null,
      "rek_wok_doc_type_xsdmf_id": null,
    }
  }
>
  <div
    className="citationContent citationDesign"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      idSearchKey={
        Object {
          "idKey": "fez_record_search_key_author_id",
          "idOrder": "rek_author_id_order",
          "idSubkey": "rek_author_id",
        }
      }
      initialNumberOfAuthors={10}
      publication={
        Object {
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [
            Object {
              "rek_author": "Dickson, Michael",
              "rek_author_id": 30053844,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:162308",
              "rek_author_xsdmf_id": 12125,
            },
            Object {
              "rek_author": "Francis, Mara",
              "rek_author_id": 30053845,
              "rek_author_order": 2,
              "rek_author_pid": "UQ:162308",
              "rek_author_xsdmf_id": 12125,
            },
          ],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [
            Object {
              "rek_author_id": 5490,
              "rek_author_id_id": 29399570,
              "rek_author_id_order": 1,
              "rek_author_id_pid": "UQ:162308",
              "rek_author_id_xsdmf_id": 12120,
            },
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": 29399571,
              "rek_author_id_order": 2,
              "rek_author_id_pid": "UQ:162308",
              "rek_author_id_xsdmf_id": 12120,
            },
          ],
          "fez_record_search_key_contributor": Array [
            Object {
              "rek_contributor": "Dickson Francis sia Architects",
              "rek_contributor_id": 3202233,
              "rek_contributor_order": 1,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Azimuts sia Surveyors",
              "rek_contributor_id": 3202234,
              "rek_contributor_order": 2,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "ARB Nams sia Structural consultants",
              "rek_contributor_id": 3202235,
              "rek_contributor_order": 3,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Projektshanas birojs a.i.d.e Electrical consultants",
              "rek_contributor_id": 3202236,
              "rek_contributor_order": 4,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Telekom serviss sia Low voltage consultants",
              "rek_contributor_id": 3202237,
              "rek_contributor_order": 5,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Voteks sia Ventilation consultants",
              "rek_contributor_id": 3202238,
              "rek_contributor_order": 6,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "HVAC sia Heating, water and sewerage consultants",
              "rek_contributor_id": 3202239,
              "rek_contributor_order": 7,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Latinwest sia Swimming pool consultants",
              "rek_contributor_id": 3202240,
              "rek_contributor_order": 8,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
            Object {
              "rek_contributor": "Aleja D sia Landscape consultants",
              "rek_contributor_id": 3202241,
              "rek_contributor_order": 9,
              "rek_contributor_pid": "UQ:162308",
              "rek_contributor_xsdmf_id": 12133,
            },
          ],
          "fez_record_search_key_contributor_id": Array [
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387113,
              "rek_contributor_id_order": 1,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387114,
              "rek_contributor_id_order": 2,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387115,
              "rek_contributor_id_order": 3,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387116,
              "rek_contributor_id_order": 4,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387117,
              "rek_contributor_id_order": 5,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387118,
              "rek_contributor_id_order": 6,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387119,
              "rek_contributor_id_order": 7,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387120,
              "rek_contributor_id_order": 8,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
            Object {
              "rek_contributor_id": 0,
              "rek_contributor_id_id": 2387121,
              "rek_contributor_id_order": 9,
              "rek_contributor_id_pid": "UQ:162308",
              "rek_contributor_id_xsdmf_id": 12128,
            },
          ],
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": Object {
            "rek_date_available": "2008-01-01T00:00:00Z",
            "rek_date_available_id": 958217,
            "rek_date_available_pid": "UQ:162308",
            "rek_date_available_xsdmf_id": 12163,
          },
          "fez_record_search_key_end_date": Object {
            "rek_end_date": "2005-01-05 00:00:00",
            "rek_end_date_id": 8,
            "rek_end_date_pid": "UQ:162308",
            "rek_end_date_xsdmf_id": 12154,
          },
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:3804",
              "rek_ismemberof_id": 11965237,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:162308",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:152266",
              "rek_ismemberof_id": 11965238,
              "rek_ismemberof_order": 2,
              "rek_ismemberof_pid": "UQ:162308",
              "rek_ismemberof_xsdmf_id": 149,
            },
            Object {
              "rek_ismemberof": "UQ:254105",
              "rek_ismemberof_id": 11965239,
              "rek_ismemberof_order": 3,
              "rek_ismemberof_pid": "UQ:162308",
              "rek_ismemberof_xsdmf_id": 149,
            },
          ],
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_keywords": Array [
            Object {
              "rek_keywords": "Architecture",
              "rek_keywords_id": 30033418,
              "rek_keywords_order": 1,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
            Object {
              "rek_keywords": "Landscape design",
              "rek_keywords_id": 30033419,
              "rek_keywords_order": 2,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
            Object {
              "rek_keywords": "Restoration",
              "rek_keywords_id": 30033420,
              "rek_keywords_order": 3,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
            Object {
              "rek_keywords": "Interior and Environmental Design",
              "rek_keywords_id": 30033421,
              "rek_keywords_order": 4,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
            Object {
              "rek_keywords": "Original Creative Works - Design/Architectural work",
              "rek_keywords_id": 30033422,
              "rek_keywords_order": 5,
              "rek_keywords_pid": "UQ:162308",
              "rek_keywords_xsdmf_id": 12138,
            },
          ],
          "fez_record_search_key_language": Array [],
          "fez_record_search_key_link": Array [],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [
            Object {
              "rek_location": "Meshaparks, Riga, Latvia",
              "rek_location_id": 76950,
              "rek_location_order": null,
              "rek_location_pid": "UQ:162308",
              "rek_location_xsdmf_id": 12159,
            },
          ],
          "fez_record_search_key_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_place_of_publication": Object {
            "rek_place_of_publication": "Riga, Latvia",
            "rek_place_of_publication_id": 4344342,
            "rek_place_of_publication_pid": "UQ:162308",
            "rek_place_of_publication_xsdmf_id": 12303,
          },
          "fez_record_search_key_project_name": Object {
            "rek_project_name": "Site setting and circumstance: A house and courtyard garden, Riga, Latvia",
            "rek_project_name_id": 3660,
            "rek_project_name_pid": "UQ:162308",
            "rek_project_name_xsdmf_id": 12165,
          },
          "fez_record_search_key_project_start_date": Object {
            "rek_project_start_date": "2005-01-05 00:00:00",
            "rek_project_start_date_id": 8,
            "rek_project_start_date_pid": "UQ:162308",
            "rek_project_start_date_xsdmf_id": 12154,
          },
          "fez_record_search_key_publisher": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": Object {
            "rek_refereed_source": "453638",
            "rek_refereed_source_id": 1420425,
            "rek_refereed_source_pid": "UQ:162308",
            "rek_refereed_source_xsdmf_id": 16623,
          },
          "fez_record_search_key_rights": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_series": null,
          "fez_record_search_key_source": Object {
            "rek_source": null,
          },
          "fez_record_search_key_start_date": Object {
            "rek_start_date": "2005-01-05 00:00:00",
            "rek_start_date_id": 8,
            "rek_start_date_pid": "UQ:162308",
            "rek_start_date_xsdmf_id": 12154,
          },
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_subject": Array [
            Object {
              "rek_subject": 310000,
              "rek_subject_id": 9416991,
              "rek_subject_order": 1,
              "rek_subject_pid": "UQ:162308",
              "rek_subject_xsdmf_id": 12137,
            },
            Object {
              "rek_subject": 450025,
              "rek_subject_id": 9416992,
              "rek_subject_order": 2,
              "rek_subject_pid": "UQ:162308",
              "rek_subject_xsdmf_id": 12137,
            },
            Object {
              "rek_subject": 452674,
              "rek_subject_id": 9416993,
              "rek_subject_order": 3,
              "rek_subject_pid": "UQ:162308",
              "rek_subject_xsdmf_id": 12137,
            },
            Object {
              "rek_subject": 452675,
              "rek_subject_id": 9416994,
              "rek_subject_order": 4,
              "rek_subject_pid": "UQ:162308",
              "rek_subject_xsdmf_id": 12137,
            },
          ],
          "fez_record_search_key_total_pages": Object {
            "rek_total_pages": "1 Design project",
            "rek_total_pages_id": 5709778,
            "rek_total_pages_pid": "UQ:162308",
            "rek_total_pages_xsdmf_id": 12309,
          },
          "fez_record_search_key_translated_title": null,
          "rek_altmetric_id": null,
          "rek_altmetric_id_xsdmf_id": null,
          "rek_altmetric_score": null,
          "rek_altmetric_score_xsdmf_id": null,
          "rek_citation": "",
          "rek_copyright": "on",
          "rek_copyright_xsdmf_id": 3679,
          "rek_created_date": "2009-01-30T11:08:42Z",
          "rek_created_date_xsdmf_id": 3677,
          "rek_date": "2017-10-31T13:53:23Z",
          "rek_date_xsdmf_id": null,
          "rek_depositor": 2575,
          "rek_depositor_affiliation": 888,
          "rek_depositor_affiliation_xsdmf_id": 11881,
          "rek_depositor_xsdmf_id": 7578,
          "rek_description": "The project is an exploration in the role of the garden as a means of generating a sense of place and to become a key focus in the formation and memory of a dwelling. The project is situated in Latvia, in the suburb of Meshaparks, an old established suburb of Riga. The suburb is characterized by larger lot sizes with villas set amongst trees. In the early 1930's Scandinavian functionalist architecture came to prominence and continued in popularity for a short period, dying out in the mid 1930's. The subject project involved the restoration of an existing timber functionalist house designed in 1933 by the architect Lidija Hofmane-Grinberga and constructed in the same year. The site also contained two outbuildings designed and constructed in the mid and late 1980's The project aimed to draw out the latent potential of the site circumstance that comprised the sunny garden hidden from the street and buildings that enclosed the garden to create an informal yet enclosed space that became in effect the major outdoor \\"room\\" of the house. The design draws inspiration from traditional Latvian farmhouse courtyard gardens, Japanese enclosed gardens as well as the work of Finnish architect Alvar Aalto.",
          "rek_description_xsdmf_id": 12199,
          "rek_display_type": 316,
          "rek_display_type_lookup": "Design",
          "rek_display_type_xsdmf_id": 3673,
          "rek_file_downloads": 15,
          "rek_formatted_abstract": null,
          "rek_formatted_abstract_xsdmf_id": null,
          "rek_formatted_title": null,
          "rek_formatted_title_xsdmf_id": null,
          "rek_genre": "Design",
          "rek_genre_type": null,
          "rek_genre_type_xsdmf_id": null,
          "rek_genre_xsdmf_id": 12156,
          "rek_herdc_notes": null,
          "rek_herdc_notes_xsdmf_id": null,
          "rek_object_type": 3,
          "rek_object_type_xsdmf_id": 3674,
          "rek_pid": "UQ:162308",
          "rek_pubmed_doc_type": null,
          "rek_pubmed_doc_type_xsdmf_id": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_scopus_doc_type_xsdmf_id": null,
          "rek_security_inherited": 1,
          "rek_status": 2,
          "rek_status_xsdmf_id": 3680,
          "rek_subtype": null,
          "rek_subtype_xsdmf_id": null,
          "rek_thomson_citation_count": null,
          "rek_thomson_citation_count_xsdmf_id": null,
          "rek_title": "Site setting and circumstance: A house and courtyard garden, Riga, Latvia",
          "rek_title_xsdmf_id": 12299,
          "rek_updated_date": "2014-10-05T09:50:47Z",
          "rek_updated_date_xsdmf_id": 3678,
          "rek_wok_doc_type": null,
          "rek_wok_doc_type_xsdmf_id": null,
        }
      }
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      showLink={false}
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors"
      >
        <CitationView
          className="citationAuthor"
          key="citationAuthor_1"
          prefix=""
          suffix=""
          value="Dickson, Michael"
        >
          <span
            className="citationAuthor"
          >
            Dickson, Michael
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          key="citationAuthor_2"
          prefix=" and "
          suffix=""
          value="Francis, Mara"
        >
          <span
            className="citationAuthor"
          >
             and 
            Francis, Mara
          </span>
        </CitationView>
         
      </span>
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      date="2017-10-31T13:53:23Z"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate"
      >
        (
        2017
        ).
      </span>
    </DateCitationView>
    <CitationView
      className="citationTitle"
      prefix=" "
      suffix="."
      value="Site setting and circumstance: A house and courtyard garden, Riga, Latvia"
    >
      <span
        className="citationTitle"
      >
         
        Site setting and circumstance: A house and courtyard garden, Riga, Latvia
        .
      </span>
    </CitationView>
    <CitationView
      className="citationSource"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationSource empty"
      />
    </CitationView>
  </div>
</DesignCitation>
`;

exports[`DesignCitation renders  component with empty publication 1`] = `
<DesignCitation
  publication={Object {}}
>
  <div
    className="citationContent citationDesign"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      idSearchKey={
        Object {
          "idKey": "fez_record_search_key_author_id",
          "idOrder": "rek_author_id_order",
          "idSubkey": "rek_author_id",
        }
      }
      initialNumberOfAuthors={10}
      publication={Object {}}
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      showLink={false}
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors empty"
      />
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate empty"
      />
    </DateCitationView>
    <CitationView
      className="citationTitle"
      prefix=" "
      suffix="."
    >
      <span
        className="citationTitle empty"
      />
    </CitationView>
    <CitationView
      className="citationSource"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationSource empty"
      />
    </CitationView>
  </div>
</DesignCitation>
`;
